--- a/src/app/resgistro/resgistro.page.html
+++ b/src/app/resgistro/resgistro.page.html
@@ -26,7 +26,7 @@
           class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-0"
           required #passwordInput="ngModel">
       </div>
-      <button type="submit" [disabled]="registerForm.invalid"
+      <button type="submit" [disabled]="registerForm.invalid" (click)="onSubmit()"
         class="relative inline-flex items-center justify-center p-0.5 mb-2 me-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-purple-500 to-pink-500 group-hover:from-purple-500 group-hover:to-pink-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-purple-200 dark:focus:ring-purple-800">
         <span
           class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-transparent group-hover:dark:bg-transparent">
